<resources>
  <string name="label_clip_text">Clipboard contents (available to send)</string>
  <string name="send">Start Sending</string>
  <string name="servicedesc">For transmitting clipboard contents via NFC</string>
  <string name="typeLabel">Mime type: %1$s</string>
  <string name="labelLabel">Label: %1$s</string>

  <string name="sending_status">Sending… Tap against receiving device
  now! (Remember that NFCCopyPaste must be installed there
  too.)</string>

  <string name="no_nfc_expl">NFC is not supported on this device. You
  might as well uninstall now.</string>

  <string name="uninstall_expl">If NFCCopyPaste doesn\'t sound useful
  to you, feel free to uninstall now using the button below. No hard
  feelings. 🙂</string>
  <string name="uninstall">Uninstall</string>

  <string name="must_enable_expl">NFC is available on your phone but
  is disabled in Settings. You need to enable it in order to send or
  receive anything.</string>
  <string name="enable">Enable NFC</string>

  <string name="channel_desc">General notifications</string>
  <string name="notify_receipt_title">Clipboard received</string>
  <string name="notify_receipt_body_fmt">New text: %1$s…</string>

  <string name="about_expl_1">NFCCopyPaste does only one thing: it
  transmits the contents of your device\'s clipboard to another device
  via NFC. ("NFC" is Near-Field Communications, the tap-to-share radio
  technology used for features like Google Pay.)</string>

  <string name="about_expl_2">Android 10 disabled the \"Android Beam\"
  feature, based on NFC, that lots of my favorite apps used to
  exchange data with themselves. My wife and I were used to sharing
  ColorNote shopping lists this way, for example. I couldn\'t fix
  ColorNote, but I could take advantage of its use of Copy-and-Paste
  by writing this app. Now we share lists by copying them on one
  device, touching the two, and pasting them on the other.</string>

  <string name="about_expl_3">I hope you\'ll forgive the rough look of this app. I\'ve been
  programming Android for 10 years but am not a UI designer. I\'m
  sharing this because I hope it will be useful. If it is, and people
  want to contribute icons or other visual improvements, I\'ll include
  them. Reach me at xwords@eehouse.org. Thanks!</string>

  <string name="empty_hint">Clipboard is empty</string>

  <!-- Tabs -->
  <string name="tab_clip">Send Clipboard</string>
  <string name="tab_about">About</string>
  
  <string name="version_text_fmt">This is %1$s, version %2$s,
  rev %3$s, %4$s variant, built on %5$s.\n\nCopyright (C) 2020 by Eric House. This
  free/open source software is released under the GNU Public
  License.</string>

  <string name="qrcode_expl">Here\'s a QR code that a member of your
  social distancing group can use to install NFCCopyPaste.</string>

  <string name="file_send_text">You can also send an entire file,
  though it may be slower than via other longer-range wireless
  choices. Estimated times are provided, but not guaranteed.</string>
  <string name="file_send">Send file</string>
  <string name="file_choose">Choose file</string>
  <string name="no_file_hint">No file chosen</string>

  <string name="no_files_found">No files found in Downloads
  directory. It\'s empty, or the app doesn\'t have permission to read
  there.</string>

  <string name="notify_gotfile_title">File received</string>
  <string name="notify_gotfile_body_fmt">Tap to save %1$s</string>
</resources>
