<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
              android:padding="8dp"
              >

  <LinearLayout android:id="@+id/disabled_expl"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/must_enable_expl"
              />
    <Button android:id="@+id/enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable"
            android:layout_gravity="center_horizontal"
            />
  </LinearLayout>

  <TextView android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_clip_text"
            android:layout_gravity="center_horizontal"
            />
  <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                >
    <TextView android:id="@+id/clip_type"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              />
    <TextView android:id="@+id/clip_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              />
    <TextView android:id="@+id/clip_text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:scrollbars="vertical"
              android:maxLines="10"
              android:hint="@string/empty_hint"
              />
  </LinearLayout>
  <Button android:id="@+id/send"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/send"
          android:layout_gravity="center_horizontal"
          />

  <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_send_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
  <TextView android:id="@+id/chosen_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_file_hint"
            />
  <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
    <Button android:id="@+id/file_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_choose"
            android:layout_gravity="center_horizontal"
            />
    <Button android:id="@+id/file_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_send"
            android:layout_gravity="center_horizontal"
            />
  </LinearLayout>

  <LinearLayout android:id="@+id/sending_status"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/sending_status"
              android:layout_gravity="center_horizontal"
              />

    <ProgressBar android:id="@+id/progress"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:progress="0"
                 android:max="10"
                 />
  </LinearLayout>
</LinearLayout>
