<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            tools:context=".ui.MainActivity"
            >
  <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                >
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/about_expl_1"
              android:textAppearance="?android:attr/textAppearanceMedium"
              />
    <TextView android:paddingTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/about_expl_2"
              android:textAppearance="?android:attr/textAppearanceMedium"
              />
    <TextView android:paddingTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/about_expl_3"
              android:textAppearance="?android:attr/textAppearanceMedium"
              />

    <LinearLayout android:id="@+id/qrcode"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  >
      <View style="@style/about_separator"/>

      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_expl"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
      <ImageView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/qrcode"
                 android:layout_gravity="center_horizontal"
                 />
    </LinearLayout>

    <View style="@style/about_separator"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/uninstall_expl"
              android:textAppearance="?android:attr/textAppearanceMedium"
              />
    <Button android:id="@+id/uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uninstall"
            android:layout_gravity="center_horizontal"
            />

    <View style="@style/about_separator"/>

    <TextView android:id="@+id/version_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

  </LinearLayout>
</ScrollView>
